add excel template

--- a/GestDesReunions.csproj
+++ b/GestDesReunions.csproj
@@ -225,6 +225,7 @@
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
     <Content Include="Fonts\Arial.ttf" />
+    <Content Include="Filtrage\ReportFilter\woorksheetTemplaite.xlsx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
